# elkulator

./: .gitignore  Makefile.am  README.md  allegro5.cfg  configure.ac  elk.cfg
.github/: ci-elkulator-linux.yml
.github/workflows/: ci-build.yml  ci-elkulator-linux.yml  github-actions-demo.yml
scripts/: autoconfigure.sh
src/: 1770.c  6502.c  6502.h  Makefile.am  allegro_icon.c  callback_handlers.h  config.c  config.h  config_vars.h  csw.c  ddnoise.c  debugger.c  disc.c  elk.h  fdi.c  globaldefs.c  gui-allegro5.c  linux-gui.c  linux-keydefine.c  linux.c  logger.c  logger.h  main.c  mem.c  mem.h  parallel.c  savestate.c  serial.c  socket.c  sound.c  tapenoise.c  uef.c  uef.h  ula.c  ula.h  win-keydefine.c  win.c
src/allegro_4/: 2xsai.c  adc.c  fileutils.c  firstbyte.c  keyboard.c  linux-gui.c  linux-keydefine.c  palfilt.c  samples.c  samples.h  scale2x.c  soundopenal.c  video.c  video.h  video_internal.h
src/allegro_5/: adc.c  event_handler.c  event_handler_internal.h  fileutils.c  firstbyte.c  gui-allegro.c  gui-allegro.h  keyboard.c  keyboard_internal.h  linux-keydefine.c  menu_disc.c  menu_file.c  menu_internal.h  menu_misc.c  menu_roms.c  menu_settings.c  menu_tape.c  menus.c  palfilt.c  samples.c  soundopenal.c  video.c  video_internal.h
src/common/: event_handler.h  fileutils.h  keyboard.h  sound.h  video.h
src/hal/: 2xsai.h  hal.h  hal_end_of_main.h
src/hal/hal_allegro_4/: 2xsai.c  adc.c  firstbyte.c  hal.c  hal_sound.c  linux-gui.c  linux-keydefine.c  soundopenal.c
src/hal/hal_allegro_5/: 2xsai.c  adc.c  firstbyte.c  gui-allegro.h  hal.c  hal_sound.c  linux-gui.c  linux-keydefine.c  palfilt.c  ref_gui-allegro-b-em.c  scale2x.c
